# hubbleAI

./: .gitignore  Claude.md  pyproject.toml  requirements.txt
app/: streamlit_app.py  ui_components.py
app/pages/: 1_Latest_Forecast.py  1_overview.py  2_Performance_Dashboard.py  2_performance.py  3_scenarios.py  4_insights_chat.py
notebooks/: inspect_output.ipynb
src/hubbleAI/: __init__.py  config.py  pipeline.py  service.py  services.py
src/hubbleAI.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/hubbleAI/data_prep/: __init__.py  aggregation.py  fx_conversion.py  load_data.py  prepare.py
src/hubbleAI/evaluation/: __init__.py  metrics.py
src/hubbleAI/features/: __init__.py  builder.py  calendar_features.py  lag_features.py  lp_features.py  rolling_features.py  trend_features.py
src/hubbleAI/models/: __init__.py  lightgbm_model.py
tests/: __init__.py  conftest.py  test_metrics.py
